objects/SNAPSHOT_ExpCtr__c.object
<CustomObject>
    <description>for Expert Center Analytic Snapshot</description>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_to_OI__c</fullName>
        <label>Converted to OI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Average__c</fullName>
        <label>Daily Average</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cases__c</fullName>
        <label>Total Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SNAPSHOT: ExpCtr Cases</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Contact_Type__c</columns>
        <columns>Total_Cases__c</columns>
        <columns>Daily_Average__c</columns>
        <columns>Converted_to_OI__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>SNAPSHOT: ExpCtr Cases Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SNAPSHOT: ExpCtr Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>